2017.5/_sources/plugins/available/diversity/index.txt
diversity
=========

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
         	
         	This QIIME 2 plugin supports metrics for calculating and exploring community alpha and beta diversity through statistics and visualizations in the context of sample metadata.<br/>
         	
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.5.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="https://github.com/qiime2/q2-diversity" rel="noopener">https://github.com/qiime2/q2-diversity</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           No citation available. Cite plugin website: <a href="https://github.com/qiime2/q2-diversity" rel="noopener">https://github.com/qiime2/q2-diversity</a><br/>
           
         </td>
       </tr>
     </tbody>
   </table>

Methods
-------


.. toctree::
   :maxdepth: 1

   
   alpha
   
   alpha_phylogenetic
   
   beta
   
   beta_phylogenetic
   
   core_metrics
   
   filter_distance_matrix
   
   pcoa
   


Visualizers
-----------


.. toctree::
   :maxdepth: 1

   
   alpha_correlation
   
   alpha_group_significance
   
   beta_correlation
   
   beta_group_significance
   
   bioenv
   
